log
sá.,  9 de abr. de 2022 19:23:56: 
 hashmap.c | 40 +++++++++++++++++++++++++++++++++++++---
 1 file changed, 37 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:78:10: error: unused variable 'i' [-Werror=unused-variable]
     long i = hash(key, map->capacity);
          ^
cc1.exe: all warnings being treated as errors
Compilation failed
8910fc5
sá.,  9 de abr. de 2022 19:24:28: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:78:10: error: unused variable 'i' [-Werror=unused-variable]
     long i = hash(key, map->capacity);
          ^
hashmap.c: In function 'searchMap':
hashmap.c:92:5: error: statement with no effect [-Werror=unused-value]
     for (i ;i < map->capacity ; i++){
     ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
30acc1a
sá.,  9 de abr. de 2022 19:25:33: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:78:10: error: unused variable 'i' [-Werror=unused-variable]
     long i = hash(key, map->capacity);
          ^
cc1.exe: all warnings being treated as errors
Compilation failed
b6f7f9e
